Adding assets. Populating html pages with content.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,56 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
-<body>
-    
+<body background = "assets/images/pipes.png" style = "display: flex; min-height: 100vh; flex-direction: column;">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom m-0" style="background-color: #ffffff">
+        <a href="" class="navbar-brand text-white p-2" style="background-color: #59AAA5">Kelly Jiang</a>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item float-right">
+                <a class="nav-link text-muted" href="index.html">About</a>
+            </li>
+            <li class="navbar-text">
+                |
+            </li>
+            <li class="nav-item float-right">
+                <a class="nav-link text-muted" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="navbar-text">
+                |
+            </li>
+            <li class="nav-item float-right">
+                <a class="nav-link text-muted" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div style = "flex: 1">
+        <div class="container bg-white border mt-4">
+            <h2 style="color:#59AAA5">About</h2>
+            <div class="row">
+                <div class="column-md-10">
+                    <p class = "text-secondary m-2">
+                    <img src="assets/images/profile.jpg" alt="" class="img-fluid w-25 float-left mr-3 mb-3">
+                    My name is Kelly Jiang. I am an amateur web developer currently residing in Evanston, Illinois. 
+                    I was born in Manhattan, Kansas and lived there for ten years before moving to Lubbock, Texas. My time
+                    in small towns gave me an appreciation for nature, and for the value of peace and quiet.
+                    I graduated from Northwestern University with a B.A. in math in 2019. Both the learning and the teaching of
+                    mathematics hold a special place in my heart. I believe that abstract thinking can be an exercise in creativity
+                    and artistry. I hope that web development will offer me a fulfilling career with room for creative freedom.
+                    I am always looking for new ways to challenge myself.
+                    <br>
+                    My current hobbies include rock climbing, biking, video gaming, and playing chess. Some games I'm currently
+                    playing include Red Dead Redemption 2, Return of the Obra Dinn, and Hearthstone. I also consider myself to be
+                    an avid reader. A few of my favorite books are <i>The Brothers Karamazov</i>, <i>To the Lighthouse</i>, and 
+                    <i>Mother Night</i>. I'm always open to new recommendations.
+                    <br>
+                    I am the proud owner of two rats! Their instagram can be found at 
+                    <a href=https://www.instagram.com/rattieswithsnackies/>@rattieswithsnackies</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer bg-secondary text-light text-center">
+         © Copyright
+    </footer>
 </body>
 </html>
