--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,47 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
-<body>
-    
+<body background = "assets/images/pipes.png" style = "display: flex; min-height: 100vh; flex-direction: column;">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom m-0" style="background-color: #ffffff">
+        <a href="" class="navbar-brand text-white p-2" style="background-color: #59AAA5">Kelly Jiang</a>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item float-right">
+                <a class="nav-link text-muted" href="index.html">About</a>
+            </li>
+            <li class="navbar-text">
+                |
+            </li>
+            <li class="nav-item float-right">
+                <a class="nav-link text-muted" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="navbar-text">
+                |
+            </li>
+            <li class="nav-item float-right">
+                <a class="nav-link text-muted" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div style = "flex: 1">
+        <div class="container bg-white border mt-4">
+            <h2 style="color:#59AAA5">Contact</h2>
+            <div class="row">
+                <div class="column-md-10">
+                    <div class="form-group">
+                        <label for="Name">Name</label>
+                        <input type="name" class="form-control" placeholder="John Smith">
+                        <label for="Email">Email</label>
+                        <input type="email" class="form-control" placeholder="example@gmail.com">
+                        <label for="exampleFormControlTextarea1">Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer bg-secondary text-light text-center">
+         © Copyright
+    </footer>
 </body>
 </html>
