--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,64 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
-<body>
-    
+<body background = "assets/images/pipes.png" style = "display: flex; min-height: 100vh; flex-direction: column;">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom m-0" style="background-color: #ffffff">
+        <a href="" class="navbar-brand text-white p-2" style="background-color: #59AAA5">Kelly Jiang</a>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item float-right">
+                <a class="nav-link text-muted" href="index.html">About</a>
+            </li>
+            <li class="navbar-text">
+                |
+            </li>
+            <li class="nav-item float-right">
+                <a class="nav-link text-muted" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="navbar-text">
+                |
+            </li>
+            <li class="nav-item float-right">
+                <a class="nav-link text-muted" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div style = "flex: 1">
+        <div class="container bg-white border mt-4">
+            <h2 style="color:#59AAA5">Portfolio</h2>
+            <div class="row">
+                <div class="col-md-4 offset-md-2">
+                    <div>
+                        <img src="assets/images/abstract-q-c-250-200-7.jpg" alt="">
+                        <div style = "background-color:#59AAA5">
+                            Fractal dive
+                        </div>
+                    </div>
+                    <div>
+                        <img src="assets/images/food-q-c-250-200-2.jpg" alt="">
+                        <div style = "background-color:#59AAA5">
+                            BMX game
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div>
+                    <img src="assets/images/sports-q-c-250-200-5.jpg" alt="">
+                        <div style = "background-color:#59AAA5">
+                            Diet app   
+                        </div>
+                    </div>
+                    <div>
+                        <img src="assets/images/technics-q-c-250-200-5.jpg" alt="">
+                        <div style = "background-color:#59AAA5">
+                            Music player
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer bg-secondary text-light text-center">
+         © Copyright
+    </footer>
 </body>
 </html>
